--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7ab073">  <td>24/01/17 17:28:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:TestRuner.RunnerTest@7ae42ce3]">&gt;&gt;setUpClass</td> 
+<tr bgcolor="7ab073">  <td>24/01/17 17:45:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:TestRuner.RunnerTest@7ae42ce3]">&gt;&gt;setUpClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2111457497</td>   <td></td> </tr>
-<tr bgcolor="7ab073">  <td>24/01/17 17:28:29</td>   <td>321</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRuner.RunnerTest@7ae42ce3]">runScenario</td> 
+<tr bgcolor="7ab073">  <td>24/01/17 17:45:10</td>   <td>248</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRuner.RunnerTest@7ae42ce3]">runScenario</td> 
   <td>main@2111457497</td>   <td></td> </tr>
-<tr bgcolor="7ab073">  <td>24/01/17 17:28:37</td>   <td>8247</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:TestRuner.RunnerTest@7ae42ce3]">&lt;&lt;tearDownClass</td> 
+<tr bgcolor="7ab073">  <td>24/01/17 17:45:18</td>   <td>8200</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:TestRuner.RunnerTest@7ae42ce3]">runScenario</td> 
+  <td>main@2111457497</td>   <td></td> </tr>
+<tr bgcolor="7ab073">  <td>24/01/17 17:45:18</td>   <td>8501</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:TestRuner.RunnerTest@7ae42ce3]">&lt;&lt;tearDownClass</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2111457497</td>   <td></td> </tr>
 </table>
