--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\khala\AppData\Local\Temp\testng-eclipse--1325063604\testng-customsuite.xml</span>
+                    <span>C:\Users\khala\AppData\Local\Temp\testng-eclipse--803374220\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -100,6 +100,11 @@
                       <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
                     </span>
                     <div class="method-list-content passed suite-Default_suite">
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="TestRuner.RunnerTest" class="method navigator-link" hash-for-method="runScenario(&quot;Test Facebook Regitration Application&quot;, &quot;Test FB Application&quot;)">runScenario("Test Facebook Regitration Application", "Test FB Application")</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="TestRuner.RunnerTest" class="method navigator-link" hash-for-method="runScenario(&quot;Test Facebook Regitration Application&quot;, &quot;Test FB Application&quot;)">runScenario("Test Facebook Regitration Application", "Test FB Application")</a> <!-- method navigator-link -->
@@ -148,12 +153,22 @@
 (Runs Cucumber Scenarios)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="runScenario(&quot;Test Facebook Regitration Application&quot;, &quot;Test FB Application&quot;)">
+                  </a> <!-- runScenario("Test Facebook Regitration Application", "Test FB Application") -->
+                  <span class="method-name">runScenario</span>
+                  <span class="parameters">("Test Facebook Regitration Application", "Test FB Application")</span>
+                  <em>
+(Runs Cucumber Scenarios)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\khala\AppData\Local\Temp\testng-eclipse--1325063604\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\khala\AppData\Local\Temp\testng-eclipse--803374220\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -210,15 +225,19 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runScenario')
 data.setCell(0, 2, 'TestRuner.RunnerTest')
-data.setCell(0, 3, 7948);
+data.setCell(0, 3, 7775);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'runScenario')
 data.setCell(1, 2, 'TestRuner.RunnerTest')
-data.setCell(1, 3, 293);
+data.setCell(1, 3, 340);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'runScenario')
+data.setCell(2, 2, 'TestRuner.RunnerTest')
+data.setCell(2, 3, 337);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -251,20 +270,24 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">TestRuner.RunnerTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">setUpClass(org.testng.TestRunner@6c302a1d)</span>
+                <span class="method-name">setUpClass(org.testng.TestRunner@4d1f1ff5)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">runScenario("Test Facebook Regitration Application", "Test FB Application")</span>
-                <span class="method-start">257 ms</span>
+                <span class="method-start">318 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">runScenario("Test Facebook Regitration Application", "Test FB Application")</span>
-                <span class="method-start">8209 ms</span>
+                <span class="method-start">8094 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">runScenario("Test Facebook Regitration Application", "Test FB Application")</span>
+                <span class="method-start">8433 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">8509 ms</span>
+                <span class="method-start">8780 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
